PEG-2848 refactor and bump Framework (#8)
* PEG-2848 Testing Framework-D improvement

* PEG-2848 Testing Framework-D improvement

* Update pom.xml